one/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* CSS */

@font-face {
	font-family: "vcr";
	src: url('two/three/vcr.ttf') format('truetype');
}
body {
    width: 100%;
    max-width: 1000px;
    height: 2999.300px;
    margin: auto;
    position: relative;
    margin-left: 300px;
    margin-right: 300px;
}
.one {
    position: relative;
    z-index: 1;
    margin: auto;
    width: 1000px;
    height: 100%;
}

/* LOADING */

.se-pre-con {
	position: fixed;
    width: inherit;
    max-width: inherit;
	height: 100%;
	z-index: 9999;
	background: url(two/load.gif) center no-repeat #ffffff;
	background-size: 350px;
	-webkit-animation-name: loading;
	-webkit-animation-duration: 5s;
	visibility: hidden;
    margin: auto;
    align-items: center;
    left: 304px;
}
@-webkit-keyframes loading {
	0% {
		visibility: visible;
	}
	99% {
		visibility: visible;
	}
	100% {
		visibility: hidden;
	}
}
.load {
	position: fixed;
    width: inherit;
    max-width: inherit;
	height: 100%;
	-webkit-animation-name: loading;
	-webkit-animation-duration: 5s;
	visibility: hidden;
	font-family: vcr;
	font-size: 50px;
	color: #1d1917ff;
    text-align: center;
    margin-top: 17%;
}


/* CONTENT */

.bg {
	position: absolute;
    z-index: 2;
	margin: auto;
	width: 100%;
}

/* HEADER */

.header{
	position: fixed;
    width: inherit;
    max-width: inherit;
	z-index: 99;
	height: 88px;
	border-bottom: 3px solid #1d1917ff;
	background-color: rgb(236, 236, 236);
    align-items: center;
    transform: none;
    margin-top: 0;
}
.home, .about, .members, .album {
	background-image: linear-gradient(#f2f2f2ff, #9df09dff);
	border: 2px solid black;
    border-radius: 40px;
}
.home:hover, .about:hover, .members:hover, .album:hover, .home:active, .about:active, .members:active, .album:active {
	background-image: linear-gradient(#f2f2f2ff, rgb(240, 157, 157));
	border: 2px solid black;
    border-radius: 40px;
}
.header a {
    text-decoration: none;
}
.phead {
	font-family: vcr;
	font-size: 45px;
	color: #1d1917ff;
}
.home {
	width: 182px;
	height: 57px;
	margin-top: 14px;
	margin-left: 16px;
}
.phome {
	margin: auto;
	text-align: center;
	margin-top: 6px;
}
.about {
	width: 182px;
	height: 57px;
	margin-top: -60px;
	margin-left: 277px;
}
.pabout {
	margin: auto;
	text-align: center;
	margin-top: 6px;
}
.members {
	width: 182px;
	height: 57px;
	margin-top: -60px;
	margin-left: 538px;
}
.members .pmembers {
	font-size: 38px;
	margin: auto;
	text-align: center;
	margin-top: 9px;
}
.album {
	width: 182px;
	height: 57px;
	margin-top: -60px;
	margin-left: 799px;
}
.palbum {
	text-align: center;
	margin-top: 6px;
}

/* WELCOME */

.welcome {
	position: absolute;
	z-index: 3;
	width: 100%;
	height: 700px;
}
.circle1 {
	position: absolute;
	z-index: 4;
	width: 550px;
	height: 280px;
	background-color: #ffffff;
	border-radius: 50%;
	margin-top: 220px;
	margin-left: -80px;
	filter: blur(1.5px);
	opacity: 0.5;
}
.name {
	position: absolute;
	z-index: 5;
	width: 494px;
	margin-top: 186px;
}

/* ABOUT */
.info {
	position: absolute;
	z-index: 3;
	width: 100%;
	height: 518px;
	margin-top: 622px;
}
.aabout {
    position: absolute;
    z-index: 4;
	margin: auto;
	width: 266px;
	margin-top: 104px;
	margin-left: 365px;
    top: 0px;
}
.pabout2 {
    top: 180px;
	position: absolute;
	z-index: 5;
	font-family: Verdana, Geneva, Tahoma, sans-serif;
	font-size: 45px;
	color: #1d1917ff;
	font-size: 25px;
	margin: auto;
	text-align: center;
	margin-top: 40px;
	margin-left: 135px;
	width: 730px;
	line-height: 1.3;
}
.circle2 {
    top: 170px;
	position: absolute;
	z-index: 2;
	margin: auto;
	width: 940px;
	height: 360px;
	background-color: #f2f2f2ff;
	border-radius: 50%;
	margin-top: -10px;
	/* margin-bottom: 80px; */
	margin-left: 10px;
	filter: blur(35px);
}

/* MEMBERS */
.buka1, .tutup1, .buka2, .tutup2, .buka3, .tutup3, .buka4, .tutup4, .buka5, .tutup5 {
	display: none;
}
.idol {
	position: absolute;
	z-index: 3;
	width: 100%;
	height: 1148px;
	margin-top: 1057px;
}
.hanni, .danielle, .hyein {
    position: absolute;
	z-index: 4;
	margin-top: -195px;
    margin-left: 876px;
}
.amembers {
	margin: auto;
	width: 363px;
	margin-top: 107px;
	margin-left: 513px;
}
/* TAB MINJI */
.file_minji {
    position : absolute ;
    z-index : 6 ;
    width : 91px ;
    margin-top: 110px;
    margin-left: -677px;
    cursor : pointer ;
}
.tab_minji {
    position : absolute ;
    z-index : 4 ;
    width : 60px ;
    margin-top: 120px;
    margin-left: -670px;
}
.name_minji {
	position : absolute ;
    z-index : 3 ;
	width: 46px;
	height: 20px;
    font-size: 20px;
	font-family: Verdana, Geneva, Tahoma, sans-serif;
	margin-top: 13px;
	margin-left: 221px;
}
.tutup_bottom1 {
    position : absolute ;
    z-index : 5 ;
    width : 50px ;
    height : 50px ;
    margin-top: 120px;
    margin-left: -670px;
    cursor : pointer ;
} 
/* ... */

